[tool.poetry]
name = "swing-tool"
version = "1.1.1"
description = "Tools for Swing."
authors = ["Aiden Huang <ahuang9688@gmail.com>"]
readme = "README.md"

packages = [
    { include = "swing_tool" }
]

[tool.poetry.dependencies]
python = "~3.12"
click = "^8.1.7"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pyinstaller = "^6.10.0"
black = "^24.8.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-cli-tool = "swing_tool.cli:swing"

[tool.black]
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ["build", ".git"]
max-line-length = 88
